added dynamic button through api

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <!-- header section start from here -->
     <header class="w-11/12 mx-auto">
       <!-- nav bar start from here -->
-      <nav class="flex justify-between items-center py-5">
-        <div class="logo"><img src="images/Logo.png" alt="" /></div>
+      <nav class="flex justify-between items-center py-3 border-b">
+        <div class="logo w-[100px]">
+          <img class="w-full" src="images/Logo.png" alt="" />
+        </div>
         <div class="search">
           <label class="input input-bordered flex items-center gap-2">
             <input type="text" class="grow" placeholder="Search" />
@@ -42,5 +44,17 @@
       <!-- nav bar end from here -->
     </header>
     <!-- header section end from here -->
+    <!-- New nav bar created here -->
+    <nav id="category" class="py-3 flex gap-5 justify-center">
+      <!-- Dynomic button will created here from API -->
+    </nav>
+
+    <main>
+      <section
+        id="videos"
+        class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10"
+      ></section>
+    </main>
+    <script src="js/video.js"></script>
   </body>
 </html>
