--- a/index.html
+++ b/index.html
@@ -55,6 +55,22 @@
         class="w-11/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 py-10"
       ></section>
     </main>
+
+    <!-- started modal here  -->
+    <!-- Open the modal using ID.showModal() method -->
+    <button class="btn" onclick="customModal.showModal()">open modal</button>
+    <dialog id="customModal" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <div id="modal-content">// will added details here</div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
+    <!-- ended modal here  -->
     <script src="js/video.js"></script>
   </body>
 </html>
